# mujoco_mpc_cyphilab

./: CMakeLists.txt
.github/: copilot-instructions.md
docs/: NEW_TASK_TUTORIAL.md
mjpc/: CMakeLists.txt  main.cc
mjpc/tasks/: CMakeLists.txt  tasks.cc
mjpc/tasks/Turtle 3D Swimming/: task.xml  turtle_3dswimming.h  turtle_3dswimming_actuators.xml  turtle_3dswimming_model.xml
mjpc/tasks/Turtle_3D_Swimming/: turtle_3dswimming.cc  turtle_3dswimming_body.xml
mjpc/tasks/crab_swimming/: README.md  Robot.xml  Scene.xml  crab_swimming.cc  crab_swimming.h  crab_swimming_model.xml  patch_crab_robot.py  task.xml
mjpc/tasks/crab_swimming/asset/: 6709K503_23guiderail.stl  cshaperemesh.stl  distal segment back left.stl  kneetoankle.stl  mid segment middle left.STL  plate.STL  plateremesh.stl  proximal segment front left.STL  rail.stl  sandflipper.stl  sebasplate.stl  sidewaysscoop.stl
mjpc/tasks/paddle_crab_swimming/: CMakeLists.txt  README.md  README_DIAGNOSTIC.md  model.xml  noground.xml  paddle_crab_swimming.cc  paddle_crab_swimming.h  patch_paddle_crab_robot.py  robot_xdomain.xml  robot_xdomain_modified.xml  task.xml
mjpc/tasks/pterosaur/: prepare_model.py  pterosaur.cc  pterosaur.h  pterosaur.xml.patch  pterosaur_scene.xml.patch  task.xml
mjpc/tasks/spirob/: spirob.cc  spirob.h  spirob.xml.patch  spirob_scene.xml.patch  task.xml
mjpc/tasks/turtle_3dswimming/: README.md  task.xml  turtle_3dswimming.cc  turtle_3dswimming.h  turtle_3dswimming_actuators.xml  turtle_3dswimming_body.xml  turtle_3dswimming_model.xml
mjpc/tasks/turtle_3dswimming/assets/: 4in_tube.stl  (+57 more)
